# Restaurant-FL

./: .dockerignore  .env-example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Dockerfile.python  Dockerfile.tastebot  README.md  adjM.npz  adjM.py  attr.py  clear_tendermint.sh  client.py  compile_neighbor_restaurant.sh  config.py  customer.csv  customer.py  customer_adj.npz  data.py  dblp.py  delete_con_state.sh  devign.py  embeddings.py  features_0.npz  features_0.py  features_1.npz  features_1.py  gat.py  hf.py  labels.npy  main.py  neighbor_customers.py  neighbor_restauarnt.py  neighbor_test.py  poetry.toml  poetry_tastebot_plugin-1.0.0-py3-none-any.whl  psi_pb2_grpc.py  pyg_lib-0.4.0+pt24cpu-cp312-cp312-linux_x86_64.whl  pyproject.toml  (+25 more)
.claude/memory/: MEMORY.md
ai/: agno_eg.py  client.py  emotion.py  example  litellm-ollama.py  ollama_local_multithread2.py  ollama_local_multithread5.py  ollama_local_multithread8.py  prompts.py  prompts.yaml  restaurant_kg.py  restaurant_model.py  summarizer.py  swigg.modelfile  test_graphiti.py  test_graphiti_falkor.py  test_openai.py  train_spacy.py  xlnet_attention.py
dapp/: app.py  app1.py
fl/: client.py  client_app.py  flwr_dataset.py  pyproject.toml  server_app.py  task.py
im/: __init__.py  client.py
im/libs/: libstatus.so.0  status-backend
im/patches/: 0001-status-go-api-ext.patch
ml/: hgt_dblp.py  load_csv.py  neighbor_customers.py  restaurant_interactions.csv  swg_db.py  swg_db_local.py  swg_ml.py  swg_ml_local.py  swg_predict.py
p2p/: Makefile  __init__.py  client.py  client_psi.py  compile_neighbor_restaurant.sh  create_enr.go  device.go  device_test.go  go.mod  go.sum  neighbor_restauarnt.py  neighbor_restaurant.py  nodes.restaurants.conf  psi_pb2.py  psi_pb2_grpc.py  restaurant.proto  restaurant_enr.go  restaurant_pb2.py  restaurant_pb2_grpc.py  test_enr.go  waku.go
p2p/bootstrap/: client.py  client_psi.py
p2p/consensus/: Makefile  app.go  c_enr.go  cgo_utils.c  cgo_utils.go  cgo_utils.h  client.py  client_sync.go  consensus.go  consensus.pb.go  go.mod  order.pb.go  order.proto  signals.c  signals.go  sync.go  sync.pb.go  sync.proto
p2p/consensus/client_1/config/: addrbook.json  config.toml  genesis.json  node_key.json  priv_validator_key.json
p2p/consensus/client_2/config/: addrbook.json  config.toml  genesis.json  node_key.json  priv_validator_key.json
p2p/consensus/config/: addrbook.json  config.toml  genesis.json  node_key.json  priv_validator_key.json
p2p/genkey/: genkey  genkey.go  go.mod  go.sum
p2p/local/: client.py  client_psi.py
p2p/messaging/: client.py
p2p/neighbor/: client.py  client_psi.py
p2p/patches/: 0001-tendermint-init-cmd.patch  0001-waku-api-ext.patch
p2p/rsenr/: create_enr.go  rsenr.go  test_enr.go
p2p/x3dh/: x3dh.go
restaurant_ai/: dans_pred.js  local_pdf.py  ollama_local_multithread.py  ollama_local_multithread1.py  ollama_local_multithread3.py  ollama_local_multithread4.py  ollama_local_multithread6.py  ollama_local_multithread7.py  ollama_local_multithread9.py  prompts.yaml  restaurant_feedback.csv  restaurant_interactions.csv  restaurant_model.py  smolagent_local.py  smolagent_rag.py  swigg1_0_gemma3_4b.modelfile  swigg1_0_gemma3_4b_samples.txt  system_prompt_ollama.txt  toolprompt.py
restaurant_fl/: __init__.py  client_app.py  server_app.py  swg_state_global.pth  task.py
restaurant_status/: package-lock.json  package.json  status_messaging.js  tsconfig.json  tsconfig.tsbuildinfo
restaurant_status/libs/: libstatus.so.0
restaurant_status/src/: index.ts
restaurant_waku/: client_psi.py  go.mod  go.sum  libgowaku.so.0  message_pb2.py  restaurant_enr.go  restaurant_psi.py  test_enr.go  waku.py  waku_2.py
restaurant_waku/bootstrap/: client_psi.py
restaurant_waku/local/: clear_store.sh  client_psi.py
restaurant_waku/neighbor/: clear_store.sh  client_psi.py
tests/: pizza.txt  test_config_tendermint.py  test_peer.py  test_replace.py  testpsi.py
tests/configs/: pyproject-1.toml
tools/poetry/: pyproject.toml
tools/poetry/poetry_tastebot_plugin/: plugin.py
