[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "restaurant_fl"
version = "1.0.0"
description = "Federated Learning with SetFit Hugginface Transformers and Flower"
license = "Apache-2.0"
authors = [
    { name = "Bosco Jacinto", email = "boscojac@gmail.com" },
]
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets>=0.5.0",
    "torch==2.4.0",
    "transformers>=4.30.0,<5.0",
    "evaluate>=0.4.0,<1.0",
    "datasets>=2.0.0, <3.0",
    "scikit-learn>=1.3.1, <2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "boscojacinto"

[tool.flwr.app.components]
serverapp = "restaurant_fl.server_app:app"
clientapp = "restaurant_fl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
model-name = "swigg/hgt-small-v1.0-restaurants-pred"
fraction-fit = 0.5
fraction-evaluate = 0.5

[tool.flwr.federations]
default = "local-deployment"

[tool.flwr.federations.local-deployment]
address = "0.0.0.0:9093"
insecure = true
