[build-system]
requires = ["poetry-core", "grpcio-tools==1.69.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tastebot"
version = "1.1.0"
description = "A food intellect for restaurants and customers alike"
authors = ["BoscoJacinto <boscojac@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "ai" },
	{ include = "fl" },
	{ include = "ml" },
	{ include = "p2p" },
]
include = ["client.py"]

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.4.0+cpu.html"
priority = "supplemental"

[[tool.poetry.source]]
name = "torch_sparse"
url = "https://data.pyg.org/whl/torch-2.4.0+cpu.html"
priority = "supplemental"

[tool.poetry.requires-plugins]
poetry-tastebot-plugin = { url = "https://github.com/boscojacinto/Restaurant-FL/releases/download/v1.1.0/poetry_tastebot_plugin-1.1.13-py3-none-any.whl" }

# [tool.poetry.poetry-tastebot-plugin]

[tool.poetry.scripts]
client = "client:main"
server = "server:main"
neighbor = "p2p.neighbor_restaurant:main"

[tool.tastebot.app.restaurant]
name = "TasteBot"
device = "restaurant-pc"

[tool.tastebot.app.embeddings]
max_customers = 10000
max_restaurants = 1277
customer_features_num = 1024
restaurant_features_num = 1024

[tool.poetry.group.dev.dependencies]
qrcodegen = "1.8.0"

[tool.poetry.group.ai.dependencies]
ollama = "0.4.7"
transformers = "4.49.0"
tokenizers = "0.21.0"
openai = "1.70.0"
huggingface-hub = "0.29.2"
langchain = "0.3.22"
langchain-community = "0.3.20"
langchain-core = "0.3.49"
langchain-text-splitters = "0.3.7"
langcodes = "3.5.0"
langsmith = "0.3.21"
pypdf = "5.4.0"
litellm = "1.65.7"
smolagents = "1.12.0"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
#openinference-instrumentation = "0.1.26"
openinference-instrumentation-smolagents = { version = "0.1.8", python = ">=3.10,<3.14" }
openinference-semantic-conventions = "0.1.16"
opentelemetry-api = "1.31.1"
opentelemetry-exporter-otlp = "1.31.1"
opentelemetry-exporter-otlp-proto-common = "1.31.1"
opentelemetry-exporter-otlp-proto-grpc = "1.31.1"
opentelemetry-exporter-otlp-proto-http = "1.31.1"
#opentelemetry-instrumentation = { version = "0.52b1", python = ">=3.8,<3.14" }
opentelemetry-proto = "1.31.1"
opentelemetry-sdk = "1.31.1"
opentelemetry-semantic-conventions = "0.52b1"

[tool.poetry.group.fl.dependencies]
flwr = { url = "https://github.com/boscojacinto/Restaurant-FL/releases/download/v1.1.0/flwr-1.19.0-py3-none-any.whl" }
flwr-datasets = "0.5.0"
datasets = "2.21.0"
scikit-learn = "1.6.1"
evaluate = "0.4.3"

[tool.poetry.group.ml.dependencies]
torch = "2.4.0"
numpy = "2.2.3"
pandas = "2.2.3"
torch-geometric = "2.6.1"
pyg_lib = { url = "https://github.com/boscojacinto/Restaurant-FL/releases/download/v1.1.0/pyg_lib-0.4.0+pt24cpu-cp312-cp312-linux_x86_64.whl" }
torch_scatter = "2.1.2+pt24cpu"
torch_sparse = { version = "0.6.18+pt24cpu", source = "torch_sparse"}
tqdm = "4.67.1"
networkx = "3.4.2"
matplotlib = "3.10.1"
spacy = { version = "3.8.5", python = ">=3.12,<3.13" }
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
nvidia-cublas-cu12 = "12.1.3.1"
nvidia-cuda-cupti-cu12 = "12.1.105"
nvidia-cuda-nvrtc-cu12 = "12.1.105"
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cufft-cu12 = "11.0.2.54"
nvidia-curand-cu12 = "10.3.2.106"
nvidia-cusolver-cu12 = "11.4.5.107"
nvidia-cusparse-cu12 = "12.1.0.106"
nvidia-nccl-cu12 = "2.20.5"
nvidia-nvjitlink-cu12 = "12.8.93"
nvidia-nvtx-cu12 = "12.1.105"

[tool.poetry.group.p2p.dependencies]
openmined_psi = { url = "https://github.com/boscojacinto/Restaurant-FL/releases/download/v1.1.0/openmined_psi-2.0.5-cp312-cp312-manylinux_2_39_x86_64.whl" }

[tool.poetry.dependencies]
python = "^3.12"
agno = "1.2.7"
aiohappyeyeballs= "2.5.0"
aiohttp = "3.11.13"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
anyio = "4.9.0"
attrs = "25.1.0"
beautifulsoup4 = "4.13.3"
blis = { version = "1.3.0", python = ">=3.12,<3.14" }
catalogue = "2.0.10"
certifi = "2025.1.31"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
click = "8.1.8"
cloudpathlib = "0.21.0"
confection = "0.1.5"
contourpy = "1.3.1"
cryptography = "44.0.3"
cycler = "0.12.1"
cymem = "2.0.11"
dataclasses-json = "0.6.7"
Deprecated = "1.2.18"
dill = "0.3.8"
distro = "1.9.0"
docstring_parser = "0.16"
duckduckgo_search = "7.5.5"
filelock = "3.17.0"
protobuf = "5.29.3"
fonttools = "4.56.0"
frozenlist = "1.5.0"
fsspec = "2024.6.1"
gevent = "24.11.1"
gitdb = "4.0.12"
GitPython = "3.1.44"
googleapis-common-protos = "1.69.2"
greenlet = "3.1.1"
grpcio = "1.69.0"
grpcio-tools = "1.69.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"
httpx-sse = "0.4.0"
idna = "3.10"
importlib_metadata = "8.6.1"
iterators = "0.0.2"
Jinja2 = "3.1.6"
jiter = "0.9.0"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
kiwisolver = "1.4.8"
language_data = "1.3.0"
lxml = "5.3.1"
marisa-trie = "1.2.1"
markdown-it-py = "3.0.0"
markdownify = "1.1.0"
MarkupSafe = "3.0.2"
marshmallow = "3.26.1"
mdurl = "0.1.2"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.1.0"
multiprocess = "0.70.16"
murmurhash = "1.0.12"
mypy-extensions = "1.0.0"
orjson = "3.10.16"
packaging = "24.2"
pathspec = "0.12.1"
pgvector = "0.4.0"
pillow = "11.1.0"
pipdeptree = "2.26.0"
preshed = "3.0.9"
primp = "0.14.0"
propcache = "0.3.0"
psutil = "7.0.0"
psycopg = "3.2.6"
pyarrow = "19.0.1"
pycparser = "2.22"
pycryptodome = "3.21.0"
pydantic = "2.11.1"
pydantic-settings = "2.8.1"
pydantic_core = "2.33.0"
Pygments = "2.19.1"
pyparsing = "3.2.1"
PyQt5 = "5.15.11"
PyQt5-Qt5 = "5.15.16"
PyQt5_sip = "12.17.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.0"
python-multipart = "0.0.20"
pytz = "2025.1"
PyYAML = "6.0.2"
rank-bm25 = "0.2.2"
ray = "2.31.0"
referencing = "0.36.2"
regex = "2024.11.6"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rpds-py = "0.23.1"
safetensors = "0.5.3"
scipy = "1.15.2"
seaborn = "0.13.2"
sentence-transformers = "3.4.1"
sentencepiece = "0.2.0"
setuptools = "76.0.0"
shellingham = "1.5.4"
six = "1.17.0"
smart-open = "7.1.0"
smmap = "5.0.2"
sniffio = "1.3.1"
soupsieve = "2.6"
SQLAlchemy = "2.0.40"
#srsly = { version = "2.5.1", python = ">=3.12,<3.14" }
sympy = "1.13.3"
tenacity = "9.0.0"
thinc = { version = "8.3.6", python = ">=3.12,<3.14" }
threadpoolctl = "3.5.0"
tiktoken = "0.9.0"
tomli = "2.2.1"
tomli_w = "1.2.0"
triton = "3.0.0"
typer = "0.12.5"
typing-inspect = "0.9.0"
typing-inspection = "0.4.0"
typing_extensions = "4.12.2"
tzdata = "2025.1"
urllib3 = "2.3.0"
wasabi = "1.1.3"
weasel = "0.4.1"
websocket = "0.2.1"
websocket-client = "1.8.0"
wrapt = "1.17.2"
xxhash = "3.5.0"
yarl = "1.18.3"
zipp = "3.21.0"
zstandard = "0.23.0"