[build-system]
requires = ["poetry-core", "grpcio-tools==1.69.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tastebot"
version = "1.1.0"
description = "A food intellect for restaurants and customers alike"
authors = ["BoscoJacinto <boscojac@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "ai" },
	{ include = "fl" },
	{ include = "ml" },
	{ include = "p2p" },
]
include = ["client.py", "config.py"]
package-mode = false

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.4.0+cpu.html"
priority = "supplemental"

[[tool.poetry.source]]
name = "torch_sparse"
url = "https://data.pyg.org/whl/torch-2.4.0+cpu.html"
priority = "supplemental"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.requires-plugins]
poetry-tastebot-plugin = { url = "https://github.com/boscojacinto/Restaurant-FL/releases/download/v1.1.0/poetry_tastebot_plugin-1.3.23-py3-none-any.whl" }

#[tool.poetry.poetry-tastebot-plugin]
#env_file = ".env"

[tool.poetry.scripts]
client = "client:main"
server = "server:main"
neighbor = "p2p.neighbor_restaurant:main"

[tool.tastebot.app.restaurant]
name = "TasteBot"
device = "docker-pc"

[tool.tastebot.app.kg]
db_host = "localhost"
db_port = "6379"
db_username = "falkor"

[tool.tastebot.app.im]
status_host = "localhost"
status_port = "53983"

[tool.tastebot.app.fl]
flwr_insecure = "true"
flwr_partition_id = 0
flwr_clientappio_api_address = "0.0.0.0:9094"

[tool.tastebot.app.p2p]
m_host = "192.168.1.26"
m_port = "60011"
m_discv5_port = "9911"
m_bootstrap_enr = "enr:-KG4QJ60C0bldIz1merR78DRaJWdhSyDGImFc7n42mHqgGadXRyzOG6LOuZPyEEshitBybFvqgFw039VmOmdTFPtgg-GAZb7zkrAgmlkgnY0gmlwhMCoARqCcnOFAFkBAACJc2VjcDI1NmsxoQNLmJB1Pj72eUSZQnMof-AJdmltBsVrqCSzGa_k_YI8UIN0Y3CC6nSDdWRwgibAhXdha3UyAw"
c_moniker = "restaurant3"
c_persistent_peers = "04c6ff08d435e1b3f7fde44bdab924a166071bbb@192.168.1.26:26658"
c_addr_book_strict = "false"
c_allow_duplicate_ip = "true"
c_wal_dir = "p2p/consensus"
c_timeout_commit = "10s"
c_create_empty_blocks = "false"
c_index_tags = "order_tx_check,order_tx_deliver"

[tool.tastebot.app.embeddings]
max_customers = 10000
max_restaurants = 1277
customer_features_num = 1024
restaurant_features_num = 1024

[tool.poetry.group.ai.dependencies]
ollama = "0.4.7"
openai = "1.91.0"
graphiti-core = { version = "0.17.2", extras = ["falkordb"] }

[tool.poetry.group.fl.dependencies]
flwr = { url = "https://github.com/boscojacinto/Restaurant-FL/releases/download/v1.1.0/flwr-1.19.6-py3-none-any.whl" }

[tool.poetry.group.ml.dependencies]
torch = { version = "2.4.0", source = "pytorch-cpu" }
numpy = "2.2.3"
pandas = "2.2.3"
torch-geometric = "2.6.1"
pyg_lib = { url = "https://github.com/boscojacinto/Restaurant-FL/releases/download/v1.1.0/pyg_lib-0.4.0+pt24cpu-cp312-cp312-linux_x86_64.whl" }
torch_scatter = "2.1.2+pt24cpu"
torch_sparse = { version = "0.6.18+pt24cpu", source = "torch_sparse"}
tqdm = "4.67.1"

[tool.poetry.group.p2p.dependencies]
openmined_psi = { url = "https://github.com/boscojacinto/Restaurant-FL/releases/download/v1.1.0/openmined_psi-2.0.5-cp312-cp312-manylinux_2_39_x86_64.whl" }

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "44.0.3"
dataclasses-json = "0.6.7"
protobuf = "5.29.3"
grpcio = "1.69.0"
grpcio-tools = "1.69.0"
httpcore = "1.0.7"
iterators = "0.0.2"
marshmallow = "3.26.1"
pillow = "11.1.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.0"
python-multipart = "0.0.20"
pytz = "2025.1"
regex = "2024.11.6"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
safetensors = "0.5.3"
scipy = "1.15.2"
tomli = "2.2.1"
tomli_w = "1.2.0"
typing-inspect = "0.9.0"
typing-inspection = "0.4.0"
typing_extensions = "4.12.2"
